Bug 103421 - Crash when exiting option from conditional formatting in Reportbuilder
Summary: Crash when exiting option from conditional formatting in Reportbuilder
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
5.3.0.0.alpha0+
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Julien Nabet
URL:
Whiteboard: target:5.3.0 target:5.2.4
Keywords: haveBacktrace
Depends on:
Blocks: VclPtr
  Show dependency treegraph
 
Reported: 2016-10-22 22:56 UTC by Julien Nabet
Modified: 2016-10-27 05:06 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
bt with symbols (7.76 KB, text/plain)
2016-10-23 07:35 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Julien Nabet 2016-10-22 22:56:31 UTC
Description:
On pc Debian x86-64 with master sources updated today + enable-dbgutil, I gave a try to tdf#103412
and when exiting conditional formatting dialog, I had a crash.
warn:legacy.osl:3961:1:vcl/source/window/window.cxx:280: Window ( 7VclVBox()) with live children destroyed:  N5rptui9ConditionE()
Window ( 7VclVBox()) with live children destroyed:  N5rptui9ConditionE()


Steps to Reproduce:
1.Open a report in Base
2.Create a Text Field
3.Format/Conditional formatting
4.Click Character Formatting
5.Exit

Actual Results:  
Crash

Expected Results:
No crash


Reproducible: Always

User Profile Reset: Yes

Additional Info:


User-Agent: Mozilla/5.0 (X11; Linux x86_64; rv:45.0) Gecko/20100101 Firefox/45.0
Comment 1 Julien Nabet 2016-10-22 22:59:43 UTC
Playing with formatting buttons, I also had a crash with this on console:
warn:legacy.osl:4126:1:vcl/source/window/window.cxx:280: Window ( N5rptui11OColorPopupE(Font color)) with live children destroyed:  8ValueSet(No Fill)
Window ( N5rptui11OColorPopupE(Font color)) with live children destroyed:  8ValueSet(No Fill)
Comment 2 Julien Nabet 2016-10-23 07:35:16 UTC
Created attachment 128186 [details]
bt with symbols

I put a break at vcl/source/window/window.cxx:280 to retrieve the bt attached
Comment 3 Commit Notification 2016-10-23 12:09:48 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ef663010434da24ecda35d0f0c26ce1a2b2c0f6c

Related tdf#103421: disposeAndClear m_aColorSet (reportdesign)

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Julien Nabet 2016-10-23 13:42:38 UTC
Let's put this one to FIXED since I can't reproduce this.
Comment 5 Michael Meeks 2016-10-24 16:35:28 UTC
Thanks Julien ! =)
Comment 6 Commit Notification 2016-10-26 21:38:24 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "libreoffice-5-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a369b0a056ba121b00328a1dc74cd48d8735b361&h=libreoffice-5-2

Related tdf#103421: disposeAndClear m_aColorSet (reportdesign)

It will be available in 5.2.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.