reportdesign/source/ui/dlg/Condition.cxx
@@ -161,7 +161,7 @@ OColorPopup::~OColorPopup()
 void OColorPopup::dispose()
 {
     disposeBuilder();
-    m_aColorSet.clear();
+    m_aColorSet.disposeAndClear();
     m_pCondition.clear();
     FloatingWindow::dispose();
 }
